<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDataActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/name_title"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/addName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColor="@color/colorPrimaryText"
        android:hint="@string/enter_name_title"
        android:inputType="text"
        android:singleLine="true"
        android:background="@drawable/shape_field_primary"
        android:padding="8dp"
        android:paddingStart="20dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/name_title"/>

    <TextView
        android:id="@+id/phone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/phone_number_title"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/addPhone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColor="@color/colorPrimaryText"
        android:hint="@string/phone"
        android:inputType="phone|number"
        android:singleLine="true"
        android:background="@drawable/shape_field_primary"
        android:padding="8dp"
        android:paddingStart="20dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/phone_title"/>

    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/email_title"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPhone" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/addEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColor="@color/colorPrimaryText"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:background="@drawable/shape_field_primary"
        android:padding="8dp"
        android:paddingStart="20dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/email_title"/>

    <TextView
        android:id="@+id/address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/address_title"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEmail" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/addAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:textColor="@color/colorPrimaryText"
        android:hint="@string/address_title"
        android:inputType="textMultiLine"
        android:background="@drawable/shape_field_primary"
        android:padding="8dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:maxHeight="120dp"
        android:minHeight="80dp"
        android:gravity="start|top"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@+id/address_title"/>


</androidx.constraintlayout.widget.ConstraintLayout>